RESOLVED FIXED 98545
[chromium] fast/text/international/text-spliced-font.html and fast/writing-mode/Kusa-Makura-background-canvas.html failing on the Mac after r130443
https://bugs.webkit.org/show_bug.cgi?id=98545
Summary [chromium] fast/text/international/text-spliced-font.html and fast/writing-mo...
Dirk Pranke
Reported 2012-10-05 12:06:49 PDT
and it looks like we're a bit unclear as to whether the new results are correct or not, so I've marked the tests as failures for now and added a new baseline for fast/text/vertical-rl-rtl-linebreak.html but I don't know if that's right or not, either.
Attachments
Patch (589.83 KB, patch)
2012-10-09 10:51 PDT, Enrica Casucci
tony: review-
Patch (1.73 KB, patch)
2012-10-09 12:24 PDT, Enrica Casucci
tony: review+
Dirk Pranke
Comment 1 2012-10-05 12:07:15 PDT
At least on Lion and SnowLeopard; this may not be failing on ML.
Enrica Casucci
Comment 3 2012-10-07 19:29:35 PDT
I found a problem in r130443 that could explain this. I'll post a fix shortly.
Enrica Casucci
Comment 4 2012-10-08 13:55:36 PDT
Could you please verify that the patch I posted for 98560 fixes this problem?
Dirk Pranke
Comment 5 2012-10-08 14:52:04 PDT
Yes, it appears that that patch fixes these failures. Thanks!.
Enrica Casucci
Comment 6 2012-10-08 15:13:46 PDT
*** Bug 98560 has been marked as a duplicate of this bug. ***
Enrica Casucci
Comment 7 2012-10-09 10:51:26 PDT
Created attachment 167781 [details] Patch The patch is very large, but the code change is extremely small. The large is due to the moving of last expected results to another platform folder.
Enrica Casucci
Comment 8 2012-10-09 11:09:39 PDT
Committed revision 130779.
Tony Chang
Comment 9 2012-10-09 11:55:09 PDT
Comment on attachment 167781 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=167781&action=review > Source/WebCore/platform/graphics/FontFastPath.cpp:228 > + if (isCJKIdeographOrSymbol(c) && data.fontData->platformData().orientation() != Horizontal && !data.fontData->isTextOrientationFallback()) Sorry, this is backwards. It should be !isCJKIdeographOrSymbol(c)
Tony Chang
Comment 10 2012-10-09 11:55:28 PDT
Reopening.
Enrica Casucci
Comment 11 2012-10-09 12:09:20 PDT
(In reply to comment #10) > Reopening. Sorry, I must have deleted a character by mistake before I submitted. I'll fix it.
Enrica Casucci
Comment 12 2012-10-09 12:24:18 PDT
Enrica Casucci
Comment 13 2012-10-09 13:28:30 PDT
Committed revision 130803.
Note You need to log in before you can comment on or make changes to this bug.