[chromium] fast/text/international/text-spliced-font.html and fast/writing-mode/Kusa-Makura-background-canvas.html failing on the Mac after r130443 https://bugs.webkit.org/show_bug.cgi?id=98545

Reviewed by Tony Chang.

Source/WebCore:

Fixes a regression introduced with r130443.
No new tests added since we already have tests covering this.
Updated TestExpectations for chromium and mac.

* platform/graphics/FontFastPath.cpp:
(WebCore::Font::glyphDataAndPageForCharacter): Text orientation should not be
taken into account if the character is an ideograph or a symbol.

LayoutTests:

Updated TextExpectations for Chromium and Mac.
Moved existing expected results from mac to mac-lion and added new results for Mountain Lion.

* platform/chromium/TestExpectations:
* platform/mac-lion/fast/writing-mode/Kusa-Makura-background-canvas-expected.txt: Added.
* platform/mac/TestExpectations:
* platform/mac/fast/writing-mode/Kusa-Makura-background-canvas-expected.txt:



Canonical link: https://commits.webkit.org/116763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130779 268f45cc-cd09-0410-ab3c-d52691b4dbfc